--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -13,5 +13,8 @@
         <item
             android:id="@+id/nav_sample_edittext"
             android:title="Sample with Edittexts" />
+        <item
+            android:id="@+id/nav_sample_livedata"
+            android:title="Sample with LiveData" />
     </group>
 </menu>
