--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -16,5 +16,9 @@
         <item
             android:id="@+id/nav_sample_livedata"
             android:title="Sample with LiveData" />
+        <item
+            android:id="@+id/nav_sample_interactive"
+            android:title="Interactive sample" />
+
     </group>
 </menu>
